Fix scrollbars.
Unfortunately standard scrollbars don’t match dark backgrounds.

--- a/src/ui/home/editors/editors.less
+++ b/src/ui/home/editors/editors.less
@@ -9,21 +9,14 @@
   font-size: 12px;
   font-style: italic;
   padding: 3px;
-  width: 90px;
+  margin-right: 20px;
+  background: rgba(20, 20, 20, 0.36);
   color: #b3b3b3;
   text-align: center;
   position: absolute;
   z-index: 100;
   right: 0;
-  //bottom: 0;
-}
-
-.Editors .editorTitle.left {
-  background-color: rgba(12, 218, 0, 0.35);
-}
-
-.Editors .editorTitle.right {
-  background-color: rgba(0, 109, 255, 0.55);
+  pointer-events: none;
 }
 
 .Editors .editor {
